# FCG-T1

./: .gitignore  CMakeLists.txt  ExibePoligonosCSG.cpp  FCG_T1  LICENSE  Poligono.cpp  Poligono.h  Ponto.cpp  Ponto.h  Temporizador.cpp  Temporizador.h  boolean_ops_polygons.sln  boolean_ops_polygons.vcxproj  boolean_ops_polygons.vcxproj.filters  packages.config
data/: LeftH.txt  RightH.txt  config.json  triangulinho.txt
data/output/: diffab_out.txt  diffba_out.txt  intersec_out.txt  triquad_diff-ab.txt  triquad_diff-ba.txt  triquad_intersec.txt  triquad_union.txt  union_out.txt
